# Apex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  build.rs
.github/workflows/: release.yml
apex-ai/: Cargo.toml
apex-ai/src/: agent.rs  lib.rs  llm.rs  mcp.rs  sandbox.rs
apex-ai/src/prompts/: offensive_analyst.txt
apex-c2/: Cargo.toml
apex-c2/src/: empire.rs  havoc.rs  lib.rs  mythic.rs  sliver.rs
apex-collab/: Cargo.toml
apex-collab/src/: lib.rs  notebook.rs  sharing.rs  workspace.rs
apex-config/: Cargo.toml
apex-config/src/: lib.rs  lua.rs  theme.rs
apex-mux/: Cargo.toml
apex-mux/src/: layout.rs  lib.rs  multiplexer.rs
apex-protocol/: Cargo.toml
apex-protocol/src/: lib.rs  wire.rs
apex-pty/: Cargo.toml
apex-pty/src/: channel.rs  environment.rs  executor.rs  lib.rs  pty.rs  stabilize.rs  tamper.rs  tunnel.rs
apex-renderer/: Cargo.toml
apex-renderer/src/: atlas.rs  font_manager.rs  glyph_key.rs  lib.rs  shaper.rs  wgpu_renderer.rs
apex-renderer/src/shaders/: compute.wgsl  terminal.wgsl
apex-server/: Cargo.toml
apex-server/src/: lib.rs  session.rs  socket.rs
assets/: logo-ascii.txt
assets/themes/: backtrack.toml  kali-dark.toml
benchmarks/: config.toml  run.sh
packaging/: apex-terminal.desktop  apex-terminal.service
packaging/debian/: changelog  control  copyright  rules
src/: dumb.rs  lib.rs  main.rs
tests/: integration_test.rs
vte-core/: Cargo.toml
vte-core/src/: grid.rs  lib.rs  parser.rs  scrollback.rs  state.rs
zig-extensions/: build.zig
zig-extensions/src/: main.zig  wasm_bridge.zig
