[workspace]
resolver = "2"
members = [
    "vte-core",
    "apex-renderer",
    "apex-server",
    "apex-mux",
    "apex-pty",
    "apex-ai",
    "apex-c2",
    "apex-collab",
    "apex-config",
    "apex-protocol",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = []
ironrdp = ["dep:ironrdp"]

[package]
name = "apex-terminal"
version = "0.1.0"
edition = "2021"
description = "Apex Terminal: Next-Generation Integrated Offensive Environment for Kali Linux"
license = "MIT"

[dependencies]
vte-core = { path = "vte-core" }
apex-renderer = { path = "apex-renderer" }
apex-server = { path = "apex-server" }
apex-mux = { path = "apex-mux" }
apex-pty = { path = "apex-pty" }
apex-ai = { path = "apex-ai" }
apex-c2 = { path = "apex-c2" }
apex-collab = { path = "apex-collab" }
apex-config = { path = "apex-config" }
apex-protocol = { path = "apex-protocol" }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ironrdp = { version = "0.6", optional = true }

[dependencies.libc]
version = "0.2"
features = []

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
