[package]
name = "apex-c2"
version = "0.1.0"
edition = "2021"
description = "C2 framework connectors: Sliver, Havoc, Mythic, Empire"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-derive = "0.13"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
