[package]
name = "apex-collab"
version = "0.1.0"
edition = "2021"
description = "Collaborative workspaces, notebooks, and session sharing"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
