[package]
name = "apex-mux"
version = "0.1.0"
edition = "2021"
description = "Native terminal multiplexer with client-server architecture"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
apex-server = { path = "../apex-server" }
apex-protocol = { path = "../apex-protocol" }
