[package]
name = "apex-server"
version = "0.1.0"
edition = "2021"
description = "Persistent background server for session management and PTY orchestration"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
apex-protocol = { path = "../apex-protocol" }
apex-pty = { path = "../apex-pty" }
