[package]
name = "vte-core"
version = "0.1.0"
edition = "2021"
description = "High-throughput VTE/ANSI escape sequence parser and state machine"

[dependencies]
vte = "0.14"
unicode-width = "0.2"
unicode-segmentation = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
bitflags = "2"
arrayvec = "0.7"
